home-assistant/home-assistant-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: home-assistant
  namespace: default
  selfLink: /apis/apps/v1/namespaces/default/deployments/home-assistant
  uid: 69b5166f-7f26-49d3-bcbb-9ccfaaa56ab1
  resourceVersion: '982902'
  generation: 1
  creationTimestamp: '2019-11-03T14:33:34Z'
  labels:
    app.kubernetes.io/instance: home-assistant
    app.kubernetes.io/managed-by: Tiller
    app.kubernetes.io/name: home-assistant
    helm.sh/chart: home-assistant-0.9.9
  annotations:
    deployment.kubernetes.io/revision: '1'
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: home-assistant
      app.kubernetes.io/name: home-assistant
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/instance: home-assistant
        app.kubernetes.io/name: home-assistant
    spec:
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: home-assistant-pv-claim
      containers:
        - name: home-assistant
          image: 'homeassistant/home-assistant:0.99.3'
          ports:
            - name: api
              hostPort: 8123
              containerPort: 8123
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: config
              mountPath: /config
          livenessProbe:
            httpGet:
              path: /
              port: api
              scheme: HTTP
            initialDelaySeconds: 60
            timeoutSeconds: 10
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /
              port: api
              scheme: HTTP
            initialDelaySeconds: 60
            timeoutSeconds: 10
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 5
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsUser: 0
        - name: configurator
          image: 'causticlab/hass-configurator-docker:arm'
          ports:
            - name: configurator
              hostPort: 3218
              containerPort: 3218
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: config
              mountPath: /config
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsUser: 0
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirstWithHostNet
      hostNetwork: true
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: Recreate
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
status:
  observedGeneration: 1
  replicas: 1
  updatedReplicas: 1
  readyReplicas: 1
  availableReplicas: 1
  conditions:
    - type: Available
      status: 'True'
      lastUpdateTime: '2019-11-03T14:34:49Z'
      lastTransitionTime: '2019-11-03T14:34:49Z'
      reason: MinimumReplicasAvailable
      message: Deployment has minimum availability.
    - type: Progressing
      status: 'True'
      lastUpdateTime: '2019-11-03T14:34:49Z'
      lastTransitionTime: '2019-11-03T14:33:35Z'
      reason: NewReplicaSetAvailable
      message: ReplicaSet "home-assistant-849574869f" has successfully progressed.
